[tool.poetry]
name = "phonebook"
version = "0.1.0"
description = "A contact management tool with phone numbers and birthdays."
authors = ["Daryna Shmyga"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
